--- a/Egzamin - opracowane zagadnienia.tex
+++ b/Egzamin - opracowane zagadnienia.tex
@@ -618,26 +618,92 @@
 		$k_0-1+1 = k_0 \in A$ sprzeczność\\\\
 		
 		"$\Leftarrow$"
+		
+		$A\subset \mathbb{N}$, w $A$ nie ma elementu najmniejszego $\overset{?}{\Rightarrow} A=\emptyset$
+		
+		$0\notin A$, bo byłby najmniejszy
+		
+		$B:= \{ m\in \mathbb{N}:\forall_{k\leq m} k\notin A\}$
+		
+		\begin{enumerate}[I]
+			\item $0\in B$
+			\item (indukcja) $n\in B \Rightarrow 0,\dots,n\notin A$
+			
+			$n+1\notin A$ (bo gdyby $n+1\in A$ to $n+1$ byłby najmniejszy)
+			
+			$n+1\in B$
+			
+			$\overset{\text{indukcja}}{\Rightarrow} B=\mathbb{N}, \forall_{k\in \mathbb{N}} k\notin A \Rightarrow A=\emptyset$
+		\end{enumerate}
 	}
 	
 	\item Udowodnić indukcyjnie, że zbiór n-elementowy ma $2n$ podzbiorów. Zwrócić szczególną uwagę na sformułowanie drugiego kroku indukcyjnego i odpowiednie podejście do jego dowodu.
 	\Odp{
-		
+		TODO
 	}
 	
 	\item Udowodnić nierówność między średnią arytmetyczną a geometryczną za pomocą indukcji wstecznej.
 	\Odp{
+		$a_1,\dots,a_n\geq 0 \Rightarrow \frac{a_1+\dots+a_n}{n}\geq \sqrt[n]{a_1\cdot \dots \cdot a_n}$
 		
+		\begin{enumerate}[I)]
+			\item $n=1$
+			
+			$L=a_1$ $P=a_1$ ok
+			
+			\item $\forall_{n\geq 1} T_m\Rightarrow T_{2n}$
+			
+			Z:$x_1,\dots,x_n >0 \Rightarrow \sqrt[n]{x_1\cdot \dots \cdot x_n}\leq \frac{x_1+\dots+x_n}{n}$
+			
+			T:$y_1,\dots,y_{2n} >0 \Rightarrow \sqrt[2n]{y_1\cdot \dots \cdot y_{2n}}\leq \frac{y_1+\dots+y_{2n}}{2n}$
+			
+			D:$y_1,\dots,y_{2n}>0$
+			
+			$b_k:=\frac{y_{2k-1}+y_{2k}}{2}. c_k:=\sqrt{y_{2k-1}\cdot y_{2k}} \Rightarrow c_k\leq b_k$ (bo $a,b>0\Rightarrow \sqrt{ab}\leq \frac{a+b}{2}$)
+			
+			$\sqrt[2n]{y_1 \cdot \dots \cdot y_{2n}}=(y_1 \cdot \dots \cdot y_{2n})^\frac{1}{2n}=((y_1\cdot y_2)^\frac{1}{2}\cdot \dots \cdot (y_{2n-1}\cdot y_{2n})^\frac{1}{2})^\frac{1}{n}=(c_1\cdot \dots \cdot c_n)^\frac{1}{n}\underset{\text{z indukcji}}{\leq} \frac{c_1+\dots+c_n}{n}
+			\leq \frac{b_1+\dots+b_n}{n}=\frac{y_1+\dots+y_{2n}}{2n}$
+			
+			\item $T_n\Rightarrow T_{n-1}, n\geq 2$
+			
+			Z: $x_1,\dots,x_n>0 \Rightarrow \sqrt[n]{x_1\dots x_n}\leq \frac{x_1+\dots+x_n}{2}$
+			
+			T:$a_1,\dots,z_{n-1}>0 \Rightarrow \sqrt[n-1]{a_1\dots a_{n-1}}\leq \frac{a_1+\dots+a_{n-1}}{n-1}$
+				
+			D:$a_1,\dots,a_{n-1}>0$
+			
+			$x_i=a_i$ $i=1,\dots,n-1$
+			
+			$x_n:=\sqrt[n-1]{a_1\dots a_{n-1}}=(a_1\dots a_{n-1})^\frac{1}{n-1}=(x_1\dots x_{n-1})^\frac{1}{n-1}\Rightarrow x_1\dots x_{n-1}=x_n^{n-1}$
+			
+			$\frac{x_1+\dots+x_n}{n}\geq (x_1\dots x_n)^\frac{1}{n}=(x_n^n)^{\frac{1}{n}}=x_n$
+			
+			$\frac{x_1+\dots+x_n}{n}+\frac{x_n}{n}\geq x_n$
+			
+			$\frac{x_1+\dots+x_{n-1}}{n}\geq x_n(1-\frac{1}{n})=x_n\frac{n-1}{n}$
+			
+			$\frac{x_1+\dots+x_{n-1}}{n-1}\geq x_n = \sqrt[n-1]{x_1\dots x_{n-1}}$
+			
+			$\frac{a_1+\dots+a_{n-1}}{n-1}\geq\sqrt[n-1]{a_1\dots a_{n-1}}$
+			
+			Indukcja wsteczna kończy dowód.
+		\end{enumerate}
 	}
 	
 	\item Udowodnić, że suma kątów w trójkącie wynosi $180^\circ$.
 	\Odp{
+		\includegraphics[width=\linewidth]{tr180.jpeg}
 		
+		Kąty $\alpha$ i $\delta$ oraz $\beta$ i $\epsilon$ są odpowiednio sobie równe na podstawie katów naprzemianległych wewnętrznie.
+		
+		Suma kątów $\delta + \gamma + \epsilon$ jest kątem półpełnym, czyli ma $180^\circ$.
 	}
 	
 	\item Udowodnić, że suma kątów w n-kącie wypukłym wynosi $(n - 2) \cdot 180^\circ$.
 	\Odp{
+		\includegraphics[width=\linewidth]{wielo180.jpeg}
 		
+		Dowolny wielokąt wypukły o $n$ wierzchołkach można podzielić na $n-2$ trójkątów (w których kąty na siebie nie zachodzą), co daje nam w sumie $(n-2)\cdot 180^\circ$.
 	}
 	
 	\item Udowodnić, że suma kątów w n-kącie wynosi $(n - 2) \cdot 180^\circ$, wykorzystując twierdzenie o istnieniu przekątnej zawartej w wielokącie.
