--- a/Egzamin - opracowane zagadnienia.tex
+++ b/Egzamin - opracowane zagadnienia.tex
@@ -153,14 +153,16 @@
 		\begin{itemize}
 			\item konstrukcja zbioru liczb naturalnych na bazie zbiorów
 			\item istnienie elementu neutralnego względem dodawania
-			\item TODO
+			\item \textcolor{red}{TODO - Szukam argumenty}
 		\end{itemize}
 		
 		Przeciw $0\in\mathbb{N}$:
 		\begin{itemize}
 			\item wzór na średnią, $n=0$ nie może być w mianowniku
 			\item aksjomatyka Peano zaczyna się od 1
-			\item TODO
+			\item Liczby rzymskie nie mają zapisu zera
+			\item Brak problemu z dzieleniem przez liczby naturalne
+			\item Coraz częściej jest używany zwrot "dodatnie liczby całkowite"
 		\end{itemize}
 	}
 	
