--- a/Egzamin - opracowane zagadnienia.tex
+++ b/Egzamin - opracowane zagadnienia.tex
@@ -126,6 +126,8 @@
 
 \newcommand{\tg}{\text{tg}}
 \newcommand{\ctg}{\text{ctg}}
+\newcommand{\arctg}{\text{arctg}}
+\newcommand{\arcctg}{\text{arcctg}}
 \newcommand{\witw}{$\Leftrightarrow$}
 \newcommand{\wynika}{$\Rightarrow$}
 \newcommand{\UkladRownan}[2]{
@@ -968,7 +970,17 @@
 	
 	\item Wykazać, że jeśli dziedzina funkcji rzeczywistej jest zbiorem symetrycznym względem 0, to funkcja ta jest sumą funkcji parzystej i funkcji nieparzystej.
 	\Odp{
+		$f:D\rightarrow \mathbb{R}$, $D$ symetryczny względem $0$
 		
+		T: $\exists g,h : D\rightarrow \mathbb{R}$, $g$ - parzysta. $h$ - nieparzysta $: f=g+h$
+		
+		D: Zdefiniujmy $g(x):=\frac{f(x)-f(-x)}{2}$, $h(x):=\frac{f(x)+f(-x)}{2}$. Wówczas
+		\begin{itemize}
+			\item $g(x)=g(-x)$
+			\item $h(-x)=\frac{f(-x)-f(x)}{2}=\frac{-f(x)-f(-x)}{2}=-h(x)$
+		\end{itemize}
+		
+		$g(x)+h(x)=\frac{f(x)-f(-x)+f(x)+f(-x)}{2}=\frac{2f(x)}{2}=f(x)$  
 	}
 	
 	\item Zdeﬁniować funkcję rosnącą, funkcję malejącą, funkcję silnie rosnącą, funkcję silnie malejącą.
@@ -997,7 +1009,20 @@
 	
 	\item Wykazać, że jeśli złożenie dwóch funkcji jest bijekcją, to funkcja wewnętrzna jest	injekcją, a funkcja zewnętrzna surjekcją.
 	\Odp{
-		
+		D: 
+		\begin{enumerate}[(1)]
+			\item Hp. $\exists_{x_1,x_2} x_1\neq x_2 f(x_1)=f(x_2)$
+			
+			$g(f(x_1))=g(f(x_2))$
+			
+			$(g\circ f)(x_1)=(g\circ f)(x_2)$ sprzeczność
+			
+			\item $z\in Z \exists_{x\in X} (g\circ f)(x)=z$
+			
+			$g(f(x))=z$
+			
+			$y=f(x)\in Y$, $g(f(x))=z$ ok 
+		\end{enumerate}
 	}
 	
 	\item Zdeﬁniować funkcję okresową w przypadku, gdy dziedzina tej funkcji jest podzbiorem	$\mathbb{R}$.
@@ -1049,27 +1074,33 @@
 	
 	\item Uzasadnić, że powyższe deﬁnicje funkcji trygonometrycznych są postawione poprawnie.
 	\Odp{
-		
+		Zostały dobrze zdefiniowane na podstawie podobieństwa trójkątów.
 	}
 	
 	\item Zdeﬁniować funkcje sinus, cosinus, tangens, cotangens dla dowolnego kąta.
 	\Odp{
-		
+		\includegraphics[width=\linewidth]{tryg_def.jpeg}
 	}
 	
 	\item Uzasadnić, że powyższe deﬁnicje funkcji trygonometrycznych są postawione poprawnie.
 	\Odp{
-		
+		Są zdefiniowane poprawnie z podobieństwa trójkątów. Co więcej są uogólnieniem poprzedniej definicji funkcji trygonometrycznych na trójkącie protokątnym.
 	}
 	
 	\item Uzasadnić, że deﬁnicje funkcji trygonometrycznych dla dowolnego kąta są uogólnieniem analogicznych deﬁnicji dla kąta ostrego.
 	\Odp{
-		
+		Rozważając kat $\alpha$ ostry, otrzymujemy zwykły trójkąt prostokątny (gdzie sieczna jest przyprostokątną przeciwległą, rzędna jest przyprostokątną przyległa, a promień jest przeciwprostokątną).
 	}
 	
 	\item Zdeﬁniować funkcje sinus, cosinus, tangens, cotangens dla argumentu zespolonego.
 	\Odp{
+		$\mathbb{C}$
 		
+		$\sin z=\sum_{n=0}^{\infty}(-1)^n\frac{z^{n+1}}{(2n+1)!}$
+		
+		$\cos z=\sum_{n=0}^{\infty}(-1)^n\frac{z^{2n}}{(2n)!}$
+		
+		$\tg z=\frac{\sin z}{\cos z} \qquad \ctg z=\frac{\cos z}{\sin z}$
 	}
 	
 	\item Podać twierdzenie sinusów.
@@ -1131,12 +1162,22 @@
 	
 	\item Podać mechanizm tworzenia wzorów redukcyjnych i stosować go w praktyce.
 	\Odp{
-		
+		\textcolor{red}{TODO - No... W sensie jak zapamiętać wzory? Czy padanie podobieństw wykresów?}
 	}
 	
 	\item Zdeﬁniować funkcje cyklometryczne: arc sin, arc cos, arc tg.
 	\Odp{
+		$\arcsin: [-1,1] \rightarrow [-\frac{\pi}{2},\frac{\pi}{2}]$
 		
+		\includegraphics[width=0.4\linewidth]{arcsin.png}
+		
+		$\arccos: [-1,1] \rightarrow [0,\pi]$\\
+		
+		$\arctg: \mathbb{R} \rightarrow [-\frac{\pi}{2},\frac{\pi}{2}]$\\
+		
+		$\arcctg: \mathbb{R} \rightarrow [0,\pi]$
+		
+		\includegraphics[width=0.4\linewidth]{arcctg.png}
 	}
 	
 	\item Udowodnić, że $\sin 1^\circ$ jest liczbą niewymierną.
@@ -1340,32 +1381,58 @@
 	
 	\item Wykazać, że wielomian zmiennej rzeczywistej o współczynnikach rzeczywistych stopnia nieparzystego ma zawsze co najmniej jeden pierwiastek rzeczywisty.
 	\Odp{
+		D: Bez straty ogólności $a_n>0$
 		
+		$\lim\limits_{x\rightarrow \infty} W(x) = \infty$
+		
+		$\lim\limits_{x\rightarrow -\infty} W(x) = -\infty$
+		
+		$\exists_{b_1>0}: W(b_1)>0 \wedge \exists_{b_2<0}: W(b_2)<0$
+		
+		Z własności Darboux $\exists_{c\in (b_1,b_2)}: W(c)=0$
 	}
 	
 	\item Na wielomiany którego stopnia możemy zawsze rozłożyć wielomian zmiennej rzeczywistej o współczynnikach rzeczywistych?
 	\Odp{
+		Każdy wielomian o współczynnikach rzeczywistych można rozłożyc na iloczyn wielomianów stopnia co najwyżej 2 o współczynnikach rzeczywistych.
 		
+		$x^4+1=x^4+2x^2+1-2x^2=(x^2+1)-2x^2 = (x^2-\sqrt{2}x+1)(x^2+\sqrt{2}x+1)$
 	}
 	
 	\item Sformułować zasadnicze twierdzenie algebry.
 	\Odp{
-		Wielomian $n$-tego stopnia ma zawsze $n$ pierwiastków zespolonych.
+		Każdy wielomian o współczynnikach zespolonych $n$-tego stopnia można rozłożyć na iloczym dwumianów o współczynnikach zespolonych (ma dokładnie $n$ pierwiastków zespolonych z krotnościami).
+		
+		$a_nz^n+\dots+a_1z+a_0=a_n(z-z_1)(z-z_2)\dots(z-z_n)$
 	}
 	
 	\item Podać i udowodnić wzory Viete’a dla trójmianu kwadratowego.
 	\Odp{
+		$ax^2+bx+c=a(x-x_1)(x-x_2)=ax^2 - a(x_1+x_2)x+ax_1x_2$
 		
+		$x^2+\frac{b}{a}x+\frac{c}{a}=x^2 - (x_1+x_2) + x_1x_2$
+		
+		$x_1+x_2 = -\frac{b}{a}\qquad x_1x_2=\frac{c}{a}$
 	}
 	
 	\item Pokazać mechanizm tworzenia wzorów Viete’a dla wielomianu dowolnego stopnia.
 	\Odp{
-		
+		Podobnie jak wyżej... (nie będę tego pisał, Ola je udowodniła na ćwiczeniach!)
 	}
 	
 	\item Określić prawdziwość wzorów Viete’a dla trójmianu kwadratowego o współczynnikach rzeczywistych, dla którego wyróżnik $\Delta$ jest ujemny.
 	\Odp{
+		\textcolor{red}{TODO - Mam tylko pasuje z tego co było na wykładzie...}
 		
+		$x^2+3x+6$
+		
+		$\Delta=-15$
+		
+		$x_{1,2}=\frac{-1\pm i\sqrt{15}}{2}$
+		
+		$x_1+x_2 = -3$
+		
+		$x_1x_2=6$
 	}
 
 	\item Podać i udowodnić twierdzenie o podzielności przez $p$ i $q$ odpowiednich współczynników wielomianu o współczynnikach całkowitych, którego liczba wymierna $\frac{p}{q}$ jest pierwiastkiem ($\frac{p}{q}$ jest zapisane w postaci ułamka nieskracalnego).
