Initial formating (up to page 11)

--- a/Egzamin - opracowane zagadnienia.tex
+++ b/Egzamin - opracowane zagadnienia.tex
@@ -183,7 +183,7 @@
 	\Odp{
 	Klasy równoważności w relacji równoważności odgrywają kluczową rolę, ponieważ każda relacja równoważności dzieli zbiór na rozłączne klasy, gdzie elementy w danej klasie są równoważne
 	}
-	
+	\newpage
 	\item Podać formalną definicję liczb całkowitych (na bazie liczb naturalnych).
 	\Odp{
 	$\mathbb{Z}=\frac{\mathbb{N}\times\mathbb{N}}{\sim} \qquad$
@@ -231,7 +231,7 @@
 	\Odp{
 		$p-$wymierna $\Leftrightarrow$ gdy można ją przedstawić w postaci ułamka o liczniku i mianowniku całkowitym.
 	}
-	
+	\newpage
 	\item Kto to był Nicolas Bourbaki?
 	\Odp{
 		To była grupa młodych matematyków, których celem było napisanie kompletu aktualnych podręczników do matematyki.
@@ -266,7 +266,7 @@
 			
 		\end{enumerate}
 	}
-	
+	\newpage
 	\item Podać definicję ciała.
 	\Odp{
 		Ciało $\mathbb{K}$ to struktura $(\mathbb{K},+,\cdot,0,1)$ z działaniami odpowiednio $+$ i $\cdot$ (dodawanie i mnożenie) o własnościach 
@@ -302,7 +302,7 @@
 	\Odp{
 		$\{ x: x^2<2\}$ - brak kresu górnego (w $\mathbb{Q}$)
 	}
-	
+	\newpage
 	\item Podać definicję częściowego porządku i porządku.
 	\Odp{
 		Relacje $\prec$ nazywamy częściowym porządkiem na $X$, gdy spełnia
@@ -348,7 +348,7 @@
 		
 		$(a_n)+(b_n)=(a_n + b_n)$ - klasy
 	}
-	
+	\newpage
 	\item Podać definicję przekroju Dedekinda, klasy górnej, klasy dolnej.
 	\Odp{
 		$(E,\leq)$ - zbiór uporządkowany liniowo
@@ -393,7 +393,7 @@
 		$\sqrt{2}\cdot\sqrt{2}\in \mathbb{Q}$ oraz $\sqrt{2}\sqrt{3}\notin\mathbb{Q}$
 	\end{itemize}
 	}
-	
+	\newpage
 	\item Podać i udowodnić zasadę Archimedesa.
 	\Odp{
 		Zasada Archimedesa (tw o małych piechurach)
@@ -432,7 +432,7 @@
 		$$nb>1+na\geq k+1 \Rightarrow \frac{k+1}{n}<b$$
 		 
 	}
-	
+	\newpage
 	\item Udowodnić, że między dowolne dwie liczby wymierne można wstawić liczbę niewymierną.
 	\Odp{
 		$$\forall_{a,b\in \mathbb{Q}, a<b} \exists_{p\in \mathbb{R}\setminus\mathbb{Q}} a<p<b$$
@@ -476,7 +476,7 @@
 		$$z=r(\cos\varphi + i\sin\varphi)$$
 		$$|z|=\sqrt{a^2+b^2}$$
 	}
-	
+	\newpage
 	\item Uzasadnić, dlaczego niewłaściwym jest zapis liczby i jako $\sqrt{-1}$.
 	\Odp{
 		$\sqrt{-1}$  jest to zbiór elementowy $\{i,-i\}$, a nie jedna liczba.
@@ -509,6 +509,7 @@
 	\Odp{
 		Dowolny wielomian $n$-tego stopnia ma dokładnie $n$ pierwiastków zespolonych wraz z krotnościami.
 	}
+	\newpage
 	\item Zdefiniować kwaterniony.
 	\Odp{
 		$\mathbb{R}^4 \qquad \begin{bmatrix}
@@ -555,7 +556,7 @@
 		\item $(A\subset\mathbb{N}, \exists_{k\in A})(\neq\emptyset)$ oraz  $ (\exists_{i\in \mathbb{N}} \forall_{m\in A} m\leq i)\Rightarrow \exists_{k\in A} \forall_{l\in A} l\leq j$ (ograczinony z góry ma element największy)
 	\end{enumerate}
 	}
-	
+	\newpage
 	\item Sformułować zasadę indukcji matematycznej z użyciem zapisu „$T_n$” (własność prawdziwa dla liczby naturalnej $n$).
 	\Odp{
 		$A\subset \mathbb{N}$\\\\
@@ -1598,7 +1599,7 @@
 		
 		\textbf{Definicja Heinego}
 		
-		$\forall_{(xn)\subset D} x_n\rightarrow x_0 \Rightarrow f(x_n)\rightarrow f(x)$
+		$\forall_{(x_n)\subset D} x_n\rightarrow x_0 \Rightarrow f(x_n)\rightarrow f(x)$
 		
 		
 	}
