--- a/Egzamin - opracowane zagadnienia.tex
+++ b/Egzamin - opracowane zagadnienia.tex
@@ -143,7 +143,7 @@
 	\begin{enumerate}[1.]
 	\item Kto jest autorem słów „Wszystko jest liczbą”, a kto „Liczby naturalne stworzył dobry Bóg, a reszta jest dziełem człowieka”?
 	\Odp{
-	"Wszystko jest liczbą" $\sim$ hasło Pitagorejczycy (Pitagoras z Savos) VI w. p.n.e.
+	"Wszystko jest liczbą" $\sim$ hasło Pitagorejczycy (Pitagoras z Samos) VI w. p.n.e.
 	
 	"Liczby naturalne stworzył dobry Bóg, a reszta jest dziełem człowieka" $\sim$ Leopold Kroneker
 	}
