--- a/Egzamin - opracowane zagadnienia.tex
+++ b/Egzamin - opracowane zagadnienia.tex
@@ -913,10 +913,7 @@
 		\begin{itemize}
 			\item przepis (w tym wzór)
 			\item tableka
-			\item \textcolor{red}{TODO - Nie umiem się rozczytać}
-			
-			\includegraphics{help.jpeg}
-			
+			\item graf
 			\item wykres
 		\end{itemize}
 	}
