--- a/Egzamin - opracowane zagadnienia.tex
+++ b/Egzamin - opracowane zagadnienia.tex
@@ -1608,17 +1608,52 @@
 	
 	\item Udowodnić równoważność definicji Cauchy’ego i definicję Heinego ciągłości funkcji.
 	\Odp{
+		D: \textbf{ciągłość Cauchy'ego $\Rightarrow$ ciągłość Heinego}
 		
+		$(x_n)\subset D, x_n \rightarrow p$
+		
+		(?) $f(x_n)\rightarrow f(p)$
+		
+		Ustalmy $\epsilon>0$. Pytamy się, czy $\exists_k n\geq k |f(x_n)-f(p)|<\epsilon$
+		
+		Z definicji ciągłości Cauchy'ego $\exists_{\delta} |x-p|<
+		delta \Rightarrow |f(x)-f(p)|<\epsilon$
+		
+		Czyli $\exists_k : n\geq k \Rightarrow |x_n-p|<\delta$\\\\
+		
+		\textbf{ciągłość Heinego $\Rightarrow$ ciągłość Cauchy'ego}
+		
+		Hp. $\exists_\epsilon : \forall_\delta |x-p|<\delta \not\Rightarrow |f(x)-f(p)|<\epsilon$
+		
+		Weźmy $\delta = \frac{1}{n}$ z aksjomatu wyboru.
+		
+		$\forall_{n} \exists_{x_n} : |x_n-p|<\frac{1}{n}, |f(x_n)-f(p)|\geq \epsilon$
+		
+		$(x_n),x_n\rightarrow p$ $f(x_n)\not\rightarrow f(p)$ sprzeczność
 	}
 	
 	\item Sformułować twierdzenie o własności Darboux oraz twierdzenie Weierstrassa dla funkcji ciągłej $f : [a, b] \rightarrow \mathbb{R}$.
 	\Odp{
-	
+		\textbf{Własność Darboux}
+		
+		Z: $f:[a,b]\rightarrow \mathbb{R}$ - ciągła, $f(a)<f(b)$
+		
+		T: $\forall_{c\in [f(a),f(b)]} \exists_{\xi\in [a,b]} : f(\xi)=c$
+		\\\\
+		\textbf{Tw Weierstrassa}
+		
+		Z: $f:[a,b]\rightarrow \mathbb{R}$ - ciągła
+		
+		T: $\exists_{x_1,x_2 \in [a,b]} \forall_{x\in[a,b]} f(x_1)\leq f(x)\leq f(x_2)$
 	}
 	
 	\item Podać definicję pochodnej funkcji określonej na podzbiorze $D$ zbioru $\mathbb{R}$ o wartościach rzeczywistych w punkcie $x_0 \in D$. Jakie założenie należy uczynić o zbiorze $D$, by można było mówić o pochodnej funkcji?
 	\Odp{
-
+		$f:D\rightarrow \mathbb{R}, D\subset \mathbb{R}$ - \underline{otwarty}, $p\in D$
+		
+		$f'(p)=\lim\limits_{x\rightarrow p} \frac{f(x)-f(p)}{x-p}$
+		
+		
 	}
 	
 	\item Podać interpretację geometryczną pochodnej.
@@ -1630,52 +1665,94 @@
 	
 	\item Podać warunek konieczny istnienia ekstremum lokalnego funkcji różniczkowalnej.
 	\Odp{
-		
+		$f$ ma ekstremum lokalne w $x_0$ $\Leftrightarrow f'(x_0)=0$ 
 	}
 	
 	\item Podać warunek wystarczający istnienia maksimum/minimum lokalnego funkcji róż	niczkowalnej (ze zmianą znaku pochodnej) oraz dla funkcji dwukrotnie różniczkowalnej (z drugą pochodną).
 	\Odp{
-	
+		Warunki wystarczające
+		\begin{enumerate}[1)]
+			\item $f'(x_0)=0$ oraz zachodzi zmiana znaku pochodnej\\
+		
+			lub\\
+			
+			\item $f''(x_0)>0$ dla minimum albo $f''<0$ dla maximum
+		\end{enumerate}
 	}
 	
 	\item Sformułować twierdzenie Rolle’a i twierdzenie Lagrange’a.
 	\Odp{
-	
+		\textbf{Tw Rolle'a}
+		
+		Z: $f\in C[a,b], f:[a,b]\rightarrow\mathbb{R}$
+		
+		T: $f(a)=f(b)\Rightarrow \exists_{\xi\in(a,b)}: f'(\xi)=0$\\\\
+		
+		\textbf{Tw. Lagrange'a}
+		
+		Z: $f\in C[a,b], f:[a,b]\rightarrow\mathbb{R}$
+		
+		T: $\exists_{\xi \in (a,b)}: f(\xi)=\frac{f(b)-f(a)}{b-a}$
 	}
 	
 	\item Sformułować regułę de l’Hospitala.
 	\Odp{
+		$U^*$ - sąsiedztwo $x_0\in\mathbb{R}$. Jeśli spełnione są warunki
+		\begin{enumerate}[1)]
+			\item $f,g:U^* \rightarrow \mathbb{R}$
+			
+			$g(x)\neq 0$ dla $x\in U^*$
+			
+			$g'(x)\neq 0$ dla $x\in U^*$
+			
+			\item $\lim\limits_{x\rightarrow x_0}f(x)=\lim\limits_{x\rightarrow _0}g(x)=0$
+			
+			lub
+			
+			$\lim\limits_{x\rightarrow x_0}f(x)=\lim\limits_{x\rightarrow _0}g(x)=\pm\infty$
+			
+			\item $\lim\limits_{x\rightarrow x_0} \frac{f'(x)}{g'(x)}=g$
+		\end{enumerate}
 	
+		To: $\lim\limits_{x\rightarrow x_0} \frac{f(x)}{g(x)}=g$
 	}
 	
 	\item Wytłumaczyć, dlaczego przy korzystaniu z reguły de l’Hospitala nie należy używać skrótu „litera H napisana nad znakiem równości”.
 	\Odp{
-	
+		A co? Jak się korzysta z właśności Darboux to się pisze literkę "\textbf{D}"?
+		
+		Co więcej, zapis "$\overset{H}{=}$" oznacza, że obie strony są równe.
 	}
 	
-	\item Wytłumaczyć, dlaczego przy korzystaniu z reguły de l’Hospitala nie należy używać zapisu "$\lim\limits_{x\rightarrow p} \frac{f(x)}{g(x)} = \lim\limits_{x\rightarrow p} \frac{f'(x)}{g'(x)}$".
+	\item Wytłumaczyć, dlaczego przy korzystaniu z reguły de l’Hospitala nie należy używać zapisu "$\lim\limits_{x\rightarrow p} \frac{f(x)}{g(x)} \overset{H}{=} \lim\limits_{x\rightarrow p} \frac{f'(x)}{g'(x)}$".
 	\Odp{
-	
+		Zapis "$\overset{H}{=}$" oznacza, że obie strony są równe.
 	}
 	
 	\item Omówić ryzyko stosowania reguły de l’Hospitala związane z niesprawdzeniem założeń.
 	\Odp{
-	
+		Przykład: $\lim\limits_{x\rightarrow 0} \frac{\ln (x-2)}{\ln (2-x)}\overset{H}{=}\lim\limits_{x\rightarrow 0}\frac{2-x}{x-2}=-1$
+		
+		Ale $D=\emptyset$
 	}
 	
 	\item Dlaczego nie można z wykorzystaniem reguły de l’Hospitala liczyć granicy $\lim\limits_{x\rightarrow0}\frac{\sin x}{x}$ ?
 	\Odp{
-	
+		A skąd znamy pochodną sinusa?
 	}
 	
 	\item Podać fałszywy „dowód” (na podstawie reguły de l’Hospitala) tego, że jeśli funkcja jest różniczkowalna, to jest klasy $C^1$ i pokazać błąd w tym dowodzie.
 	\Odp{
-	
+		$f$ - różniczkowalna w $[a,b], x_0\in(a,b)$
+		
+		$f'(x_0)=\lim\limits_{x\rightarrow x_0}\frac{f(x)-f(x_0)}{x-x_0}=\begin{Bmatrix}
+			\lim\limits_{x\rightarrow x_0} \frac{f'(x)}{1} = \lim\limits_{x\rightarrow x_0}f'(x)
+		\end{Bmatrix}$
 	}
 	
 	\item Wytłumaczyć, dlaczego nie należy robić rzeczy podanych na załączonej „Czarnej liście”.
 	\Odp{
-	
+	No nie wiem... Czarna lista raczej kojarzy się z rzeczami \textbf{zakazanymi}. Może jednak zasady są po to by je \textbf{przestrzegać} :)
 	}
 	
 	\end{enumerate}
